# SwipingForJobs

./: .gitignore  database.py  database_backup.py  database_new.py  database_setup.py  example_client.py  file_manager.py  github_oauth.py  github_sync.py  key_test.py  launch.bat  launch.py  launch.sh  main.py  pyproject.toml  requirements.txt  start_server.py  test_api.py  test_gemini.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: ApiTest.jsx  App.jsx  GitHubCallback.jsx  GitHubIntegration.jsx  Profile.jsx  index.css  sessionManager.js
uploaded_resumes/: 20250711_075413_d0246ea0-9a46-42bb-b3b2-7642d4078041.tex
